--- a/index.html
+++ b/index.html
@@ -6,31 +6,33 @@
 	<link rel="stylesheet" href="main.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="Description" content="DATZ (DTZ) token Simple Ledger Protocol (SLP) that changes the economy of games.">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link href="http://tokens.bitcoin.com/64/43d2ee803abdc3cdf89b6e7e0fc04e7b652cca014bcdb5bc9e14a2b4814241bf.png" rel="icon" type="image/x-icon">
 </head>
 <body>
 <div class="wrapper">
 
 	<header class="header">
-		<label for="toggle" class="ham">Menu ☰</label>
+		<label for="toggle" class="ham">☰</label>
 		<div class="innerWrapper">
 			
 			<div class="logoWrap">
 				<h2 class="logoTitle">DTZ<span class="period">.</span></h2>
-				<p class="logoInfo">Revolutionizing Games</p>
+				<p class="logoInfo">All glory be to GOD</p>
 			</div>
 
 			<input type="checkbox" id="toggle">
 			<nav class="nav">
 				<ul>
 					<li><a href="#services">Data Sheet</a></li>
-					<li><a href="#Team">Team</a></li>
 					<li><a href="#buy">Buy</a></li>
 					<li><a href="#Wallets">Wallet</a></li>
 					<li><a href="#Comunnitys">Comunnity</a></li>
 					<li><a href="#contact">Servers</a></li>
+					<li><a href="#Team">Team</a></li>
 					<li><a href="#donar">Donate</a></li>
-					<li><a href="" class="navButton">SWAP</a></li>
+					<li><a href="#SWAP" class="navButton">SWAP</a></li>
 				</ul>
 
 			</nav>
@@ -146,43 +148,7 @@
 		</div> <!-- end of inner servicios  -->
 	</section> <!-- end servicios -->
 
-	<section id="Team" class="blog clearfix">
-	<div class="innerWrapper clearfix">
-		<div class="blogHeader clearfix">
-			<div class="blogBox clearfix">
-				<h2 class="sectionTitle blogTitle">Team</h2>
-				<p class="sectionInfo blogInfo">
-					Qualified team, they are the best in the business, in addition to that they are people who are destined to achieve success. Get to know them and be part of a new experience with DATZ.</p>
-			</div>
-			<div class="blogTopBox">
-				<a href="https://datozhi.blogspot.com/" class="actions blogTop ">Know More</a>
-			</div>
-		</div><!--  end of blog header -->
-		<div class="squishWrapper">
-			<div class="block block1">
-				<img src="images/NekoAndE.png"  alt="">
-				<h3 class="blockTitle">👨‍✈️ Neko AndE 👨‍✈️ -  CEO</h3>
-				<p class="blockInfo">He has a futuristic vision that will take him to the top, he is a focused and dedicated person who will achieve success.</p>
-			</div>
-			<div class="block block2">
-				<img src="images/Octa.jpg" alt="">
-				<h3 class="blockTitle">🌀 Octa 🌀 - CFO</h3>
-				<p class="blockInfo">He keeps all our accounts and wallets in order, to say the least, he's a numbers genius, do you want to challenge him? Lucky!</p>
-			</div>
-			<div class="block block3">
-				<img src="images/IMS.png" alt="">
-				<h3 class="blockTitle">🔥 AlexysIMS 🔥 - CMO</h3>
-				<p class="blockInfo">He is passionate about images and works day and night to bring you the best DATZ advertising. You can count on it for your Entertainment.</p>
-			</div>
-			<div class="block block3">
-				<img src="images/RonaldMoreno.png" alt="">
-				<h3 class="blockTitle">🤑 Ronald 🤑 - CSO</h3>
-				<p class="blockInfo">He is a person who likes commerce, he makes sure that DATZ is the best seller in the market.</p>
-			</div>
-		</div>
-	</section> <!-- end team -->
-
-	<section id="buy" class="divider">
+	<section class="divider">
 		<div class="innerWrapper">
 			<h2>¿Are you convinced that DATZ is the future currency in Games?</h2> 
 
@@ -193,8 +159,18 @@
 	<section id="Wallets" class="services">
 		<div class="innerWrapper">
 			<h2 class="">Wallets</h2>
-			<p class="sectionInfo">Our Wallet's are Bitcoin Cash (BCH) and Simple Ledger Protocol (SLP) wallets designed for everyone.</p>
+			<p class="sectionInfo">Our Wallet's are Bitcoin Cash (BCH) and Simple Ledger Protocol (SLP) wallets designed for everyone.(Come to our communities and I will find out about the reward for holders)</p>
 			<div class="squishWrapper clearfix">
+				<div class="box box4">
+					<img src="Services icons/Wallet4.webp" height="80" width="80" alt="">
+					<h3 class="">Bitcoin.com</h3>
+					<p class="boxInfo">Your gateway to DATZ and more. Buy, sell, your DATZ safely and Easily.</p>
+				</div>
+				<div class="box box3">
+					<img src="Services icons/Wallet2.png" height="80" width="80" alt="">
+					<h3 class="">Badger Walllet</h3>
+					<p class="boxInfo">For General Ledger Protocol tokens on the Bitcoin Cash Blockchain.</p>
+				</div>
 				<div class="box box1">
 					<img src="Services icons/Wallet5.webp" height="80" width="80" alt="">
 					<h3 class="">Electron Cash</h3>
@@ -205,67 +181,49 @@
 					<h3 class="">Pokket Cash</h3>
 					<p class="boxInfo">DATZ Mobile Wallet without Bullshit.</p>
 				</div>
-				<div class="box box3">
-					<img src="Services icons/Wallet2.png" height="80" width="80" alt="">
-					<h3 class="">Badger Walllet</h3>
-					<p class="boxInfo">For General Ledger Protocol tokens on the Bitcoin Cash Blockchain.</p>
-				</div>
-				<div class="box box4">
-					<img src="Services icons/Wallet4.webp" height="80" width="80" alt="">
-					<h3 class="">Bitcoin.com</h3>
-					<p class="boxInfo">Your gateway to DATZ and more. Buy, sell, your DATZ safely and Easily.</p>
-				</div>
 				<div class="box box5">
 					<img src="Services icons/Wallet3.webp" height="80" width="80" alt="">
 					<h3 class="">Zapit</h3>
 					<p class="boxInfo">A limited set of consensus rules makes the system Trustworthy.</p>
 				</div>
-				<div class="box box6">
-					<img src="Services icons/Wallet5.png" height="80" width="80" alt="">
-					<h3 class="">Wallet Signup Cash</h3>
-					<p class="boxInfo">A limited set of consensus rules makes the system Trustworthy</p>
-				</div>
 		</div> <!-- end wallets -->
 	</section> <!--  wallets -->
 
-	<section id="Comunnitys" class="skills">
-		<div class="innerWrapper clearfix">
-			<div class="puzzleInfo">
-				<h2 class="sectionTitle">Communities</h2>
-				<p class="sectionInfo skillsInfo">You can support the project by following our communities so as not to miss all the updates or updates from this great community, <br>
-					Join us and be part of our Experience!</p>
-			</div> <!-- end of  descripcion de comunidades -->
-			<div class="puzzle">
+<section id="buy" class="divider">
+	<div class="innerWrapper">
+		<h2>Buying and selling DATZ will bring airdrops profits of up to $ 1,000,000 DTZ <br> only for DATZ traders</h2> 
 
-				<div class="skillsButtons skills1">
-					<p><a href="https://discord.gg/">Discord</a></p>
-				</div>
-				<div class="skillsButtons skills1">
-					<p><a href="https://www.reddit.com/r/DATZ_Community">Reddit</a></p>
-				</div>
-				<div class="skillsButtons skills1">
-					<p><a href="https://twitter.com/DDatozhi">Twitter</a></p>
-				</div>
-				<div class="skillsButtons skills1">
-					<p><a href="https://t.me/DATZgroupOfficial">Telegram</a></p>
-				</div>
-				<div class="skillsButtons skills1">
-					<p><a href="https://m.facebook.com/DatzOfficialCrypto">Facebook</a></p>
-				</div>
-				<div class="skillsButtons skills1">
-					<p> <a href="https://datzdatozhi.medium.com/">Medium</a></p>
-				</div>
-				<div class="skillsButtons skills1">
-					<p><a href="https://datozhi.blogspot.com/">Blog</a></p>
-				</div>
-				<div class="skillsButtons skills1">
-					<p> <a href="https://www.publish0x.com/tag/dollar-dtz-tyxqmow">Publish0x</a></p>
-				</div>
-			</div> <!-- end olas comunidades  -->
-		</div> <!-- end of reddess  -->
+		<a href="https://memo.cash/token/43d2ee803abdc3cdf89b6e7e0fc04e7b652cca014bcdb5bc9e14a2b4814241bf?for-sale" class="actions dividerButton">¡Trade now !</a>
+	</div> <!-- end banner  -->
+</section><!-- end banner traders -->
 
-	</section> <!--  redes sociales or comunidades  -->
-
+<section id="contact" class="clearfix">
+	<div class="innerWrapper clearfix">
+		<div class="squishWrapper">
+			<h2 class="">Exchanges</h2>
+			<p class="sectionInfo">Trading platforms for DATZ (Trade and get rewarded in our communities)</p>
+			<div class="block block1">
+				<img src="images/Memocash.png" alt="">
+				<h3 class="">Memocash</h3>
+				<p class="blockInfo">A platform where you can trade token based on the BCH network, post your DTZ sell orders (you need BCH to move on the platform)</p>
+				<a href="https://memo.cash/token/43d2ee803abdc3cdf89b6e7e0fc04e7b652cca014bcdb5bc9e14a2b4814241bf?for-sale" class="actions blogButton">¡Go for it!</a>
+			</div>
+			<div class="block block2">
+				<img src="images/anycoin.png" alt="">
+				<h3 class="">Anycoin </h3>
+				<p class="blockInfo">A platform where you can trade DTZ / BCH with the highest possible security.</p>
+				<a href="https://www.anycoin.cash/#/pages/exchange/dashboard/dtzbch" class="actions blogButton">¡Trade now!</a>
+			</div>
+			<div class="block block3">
+				<img src="images/crytex.png" alt="">
+				<h3 class="">Crytex24</h3>
+				<p class="blockInfo">The platform where you can trade DTZ / USDT with the greatest possible security. (We request your vote to enter, claim your reward in Discord)</p>
+				<a href="https://www.cryptex24.io/coin-voting?page=1" class="actions blogButton">¡Vote!</a>
+				<a href="https://www.publish0x.com/datz-the-token-that-will-change-the-world/classes-to-be-a-good-chicken-14-listed-in-crytex24-xrngvkq" class="actions blogButton">¡How to vote!</a>
+			</div>		
+		</div>	    
+	</div>
+</section> <!--  exchangess -->
 	<section class="twitterBar clearfix">
 			<div class="innerWrapper clearfix tweet">
 				<img src="images/1627426410918.png" height="90" width="90" alt="">
@@ -273,10 +231,10 @@
 				<blockquote>
 					Currently Empower Network is our sponsor, if you want to be part of our sponsors contact AndE directly.</blockquote>
 			<p><a href="https://t.me/AndE2" class="actions dividerButton">Be our Sponsor.</a></p>
-			</div> <!-- end of twiter  -->
-	</section><!--  banner tuiter  -->
+			</div> <!-- end of sponsor  -->
+	</section><!--  banner sponsor  -->
 	
-	<section id="contact" class="clearfix">
+	<section class="clearfix">
 		<div class="innerWrapper clearfix">
 			<div class="squishWrapper">
 				<h2 class="">Associated Servers</h2>
@@ -308,6 +266,42 @@
 			</div>	    
 		</div>
 	</section> <!--  servidores -->
+
+	<section id="Team" class="blog clearfix">
+		<div class="innerWrapper clearfix">
+			<div class="blogHeader clearfix">
+				<div class="blogBox clearfix">
+					<h2 class="sectionTitle blogTitle">Team</h2>
+					<p class="sectionInfo blogInfo">
+						Qualified team, they are the best in the business, in addition to that they are people who are destined to achieve success. Get to know them and be part of a new experience with DATZ.</p>
+				</div>
+				<div class="blogTopBox">
+					<a href="https://datozhi.blogspot.com/" class="actions blogTop ">Know More</a>
+				</div>
+			</div><!--  end of blog header -->
+			<div class="squishWrapper">
+				<div class="block block1">
+					<img src="images/NekoAndE.png"  alt="">
+					<h3 class="blockTitle">👨‍✈️ Neko AndE 👨‍✈️ -  CEO</h3>
+					<p class="blockInfo">He has a futuristic vision that will take him to the top, he is a focused and dedicated person who will achieve success.</p>
+				</div>
+				<div class="block block2">
+					<img src="images/Octa.jpg" alt="">
+					<h3 class="blockTitle">🌀 Octa 🌀 - CFO</h3>
+					<p class="blockInfo">He keeps all our accounts and wallets in order, to say the least, he's a numbers genius, do you want to challenge him? Lucky!</p>
+				</div>
+				<div class="block block3">
+					<img src="images/IMS.png" alt="">
+					<h3 class="blockTitle">🔥 AlexysIMS 🔥 - CMO</h3>
+					<p class="blockInfo">He is passionate about images and works day and night to bring you the best DATZ advertising. You can count on it for your Entertainment.</p>
+				</div>
+				<div class="block block3">
+					<img src="images/RonaldMoreno.png" alt="">
+					<h3 class="blockTitle">🤑 Ronald 🤑 - CSO</h3>
+					<p class="blockInfo">He is a person who likes commerce, he makes sure that DATZ is the best seller in the market.</p>
+				</div>
+			</div>
+		</section> <!-- end team -->
 	
 	<section id="donar" class="footer clearfix">
 		<div class="innerWrapper clearfix">
@@ -315,10 +309,10 @@
 					
 			
 					<h2 class="">Donating your support will not be in vain</h2><br><h3>
-					BCH: </br>
-					BTC: </br>
-					ETH: </br>
-					TRX: </br>
+					BCH: bitcoincash:qr0qqa8f2ce0smyk9z959ujcdzueeqcugcrzmwu6kp </br> 
+					BTC: bitcoin:1PqVtTBmF7pXtCTP13sALgWE45SUxQaAg6</br>
+					ETH: 0x9610eFE98aA82F82177Dc5157A0efcce06F5e826</br>
+     SLP: simpleledger:qr0qqa8f2ce0smyk9z959ujcdzueeqcugc0es4f6gl   </br>
 					</h3>
 					<p class="newsText">You can also add your collaboration in the <a href="#">Pool</a></p>
 				
