--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="Description" content="DATZ (DTZ) token Simple Ledger Protocol (SLP) that changes the economy of games.">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link href="http://tokens.bitcoin.com/64/43d2ee803abdc3cdf89b6e7e0fc04e7b652cca014bcdb5bc9e14a2b4814241bf.png" rel="icon" type="image/x-icon">
+	<link href="fabicon.ico" rel="icon" type="image/fabicon.ico">
 </head>
 <body>
 <div class="wrapper">
@@ -42,7 +42,7 @@
 				DATZ (DTZ) token Simple Ledger Protocol (SLP) that changes the economy of games,</br>
 				his interest is the gaming economy and manifests itself under the Bitcoin Cash (BCH) network</h2>
 
-			<a href="https://memo.cash/token/43d2ee803abdc3cdf89b6e7e0fc04e7b652cca014bcdb5bc9e14a2b4814241bf?for-sale" class="actions headerButton">Get Started Now</a>
+			<a href="https://www.anycoin.cash/#/pages/exchange/dashboard/dtzbch" class="actions headerButton">Get Started Now</a>
 
 			<div class="scroll">
               <a class ="scrollLink"href="https://datozhi.blogspot.com/p/black-paper.html">Black Paper</a>
