--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>DATZ- DTZ</title>
+        <link rel="shortcut icon" href="http://tokens.bitcoin.com/64/43d2ee803abdc3cdf89b6e7e0fc04e7b652cca014bcdb5bc9e14a2b4814241bf.png">
 	<link rel="stylesheet" href="main.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="Description" content="DATZ (DTZ) token Simple Ledger Protocol (SLP) that changes the economy of games.">
+	<meta name="description" content="DATZ is an instant, amazing gamer token powered by BCH's SLP technology that is revolutionizing the gaming economy. $DATZ"></head><br/><br/>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link href="fabicon.ico" rel="icon" type="image/fabicon.ico">
 </head>
 <body>
 <div class="wrapper">
