--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="main.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="DATZ is an instant, amazing gamer token powered by BCH's SLP technology that is revolutionizing the gaming economy. $DATZ"></head><br/><br/>
+	<meta name="description" content="DATZ ($DTZ) token Simple Ledger Protocol (SLP) that changes the economy of games. $DATZ"><br/><br/>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
