--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="images/Icon.png" />
 	<meta charset="UTF-8">
 	<title>DATZ- DTZ</title>
-        <link rel="shortcut icon" href="http://tokens.bitcoin.com/64/43d2ee803abdc3cdf89b6e7e0fc04e7b652cca014bcdb5bc9e14a2b4814241bf.png">
 	<link rel="stylesheet" href="main.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="DATZ ($DTZ) token Simple Ledger Protocol (SLP) that changes the economy of games. $DATZ"><br/><br/>
+	<meta name="Description" content="DATZ (DTZ) token Simple Ledger Protocol (SLP) that changes the economy of games.">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class="wrapper">
 
 	<header class="header">
-		<label for="toggle" class="ham">☰</label>
+		<label for="toggle" class="ham">Menu ☰</label>
 		<div class="innerWrapper">
 			
 			<div class="logoWrap">
@@ -26,11 +26,11 @@
 			<nav class="nav">
 				<ul>
 					<li><a href="#services">Data Sheet</a></li>
+					<li><a href="#Team">Team</a></li>
 					<li><a href="#buy">Buy</a></li>
 					<li><a href="#Wallets">Wallet</a></li>
 					<li><a href="#Comunnitys">Comunnity</a></li>
 					<li><a href="#contact">Servers</a></li>
-					<li><a href="#Team">Team</a></li>
 					<li><a href="#donar">Donate</a></li>
 					<li><a href="#SWAP" class="navButton">SWAP</a></li>
 				</ul>
@@ -42,7 +42,7 @@
 				DATZ (DTZ) token Simple Ledger Protocol (SLP) that changes the economy of games,</br>
 				his interest is the gaming economy and manifests itself under the Bitcoin Cash (BCH) network</h2>
 
-			<a href="https://www.anycoin.cash/#/pages/exchange/dashboard/dtzbch" class="actions headerButton">Get Started Now</a>
+			<a href="https://memo.cash/token/43d2ee803abdc3cdf89b6e7e0fc04e7b652cca014bcdb5bc9e14a2b4814241bf?for-sale" class="actions headerButton">Get Started Now</a>
 
 			<div class="scroll">
               <a class ="scrollLink"href="https://datozhi.blogspot.com/p/black-paper.html">Black Paper</a>
@@ -148,7 +148,43 @@
 		</div> <!-- end of inner servicios  -->
 	</section> <!-- end servicios -->
 
-	<section class="divider">
+	<section id="Team" class="blog clearfix">
+	<div class="innerWrapper clearfix">
+		<div class="blogHeader clearfix">
+			<div class="blogBox clearfix">
+				<h2 class="sectionTitle blogTitle">Team</h2>
+				<p class="sectionInfo blogInfo">
+					Qualified team, they are the best in the business, in addition to that they are people who are destined to achieve success. Get to know them and be part of a new experience with DATZ.</p>
+			</div>
+			<div class="blogTopBox">
+				<a href="https://datozhi.blogspot.com/" class="actions blogTop ">Know More</a>
+			</div>
+		</div><!--  end of blog header -->
+		<div class="squishWrapper">
+			<div class="block block1">
+				<img src="images/NekoAndE.png"  alt="">
+				<h3 class="blockTitle">👨‍✈️ Neko AndE 👨‍✈️ -  CEO</h3>
+				<p class="blockInfo">He has a futuristic vision that will take him to the top, he is a focused and dedicated person who will achieve success.</p>
+			</div>
+			<div class="block block2">
+				<img src="images/Octa.jpg" alt="">
+				<h3 class="blockTitle">🌀 Octa 🌀 - CFO</h3>
+				<p class="blockInfo">He keeps all our accounts and wallets in order, to say the least, he's a numbers genius, do you want to challenge him? Lucky!</p>
+			</div>
+			<div class="block block3">
+				<img src="images/IMS.png" alt="">
+				<h3 class="blockTitle">🔥 AlexysIMS 🔥 - CMO</h3>
+				<p class="blockInfo">He is passionate about images and works day and night to bring you the best DATZ advertising. You can count on it for your Entertainment.</p>
+			</div>
+			<div class="block block3">
+				<img src="images/RonaldMoreno.png" alt="">
+				<h3 class="blockTitle">🤑 Ronald 🤑 - CSO</h3>
+				<p class="blockInfo">He is a person who likes commerce, he makes sure that DATZ is the best seller in the market.</p>
+			</div>
+		</div>
+	</section> <!-- end team -->
+
+	<section id="buy" class="divider">
 		<div class="innerWrapper">
 			<h2>¿Are you convinced that DATZ is the future currency in Games?</h2> 
 
@@ -166,11 +202,6 @@
 					<h3 class="">Bitcoin.com</h3>
 					<p class="boxInfo">Your gateway to DATZ and more. Buy, sell, your DATZ safely and Easily.</p>
 				</div>
-				<div class="box box3">
-					<img src="Services icons/Wallet2.png" height="80" width="80" alt="">
-					<h3 class="">Badger Walllet</h3>
-					<p class="boxInfo">For General Ledger Protocol tokens on the Bitcoin Cash Blockchain.</p>
-				</div>
 				<div class="box box1">
 					<img src="Services icons/Wallet5.webp" height="80" width="80" alt="">
 					<h3 class="">Electron Cash</h3>
@@ -181,10 +212,20 @@
 					<h3 class="">Pokket Cash</h3>
 					<p class="boxInfo">DATZ Mobile Wallet without Bullshit.</p>
 				</div>
+				<div class="box box3">
+					<img src="Services icons/Wallet2.png" height="80" width="80" alt="">
+					<h3 class="">Badger Walllet</h3>
+					<p class="boxInfo">For General Ledger Protocol tokens on the Bitcoin Cash Blockchain.</p>
+				</div>
 				<div class="box box5">
 					<img src="Services icons/Wallet3.webp" height="80" width="80" alt="">
 					<h3 class="">Zapit</h3>
 					<p class="boxInfo">A limited set of consensus rules makes the system Trustworthy.</p>
+				</div>
+				<div class="box box6">
+					<img src="Services icons/Wallet5.png" height="80" width="80" alt="">
+					<h3 class="">Wallet Signup Cash</h3>
+					<p class="boxInfo">A limited set of consensus rules makes the system Trustworthy</p>
 				</div>
 		</div> <!-- end wallets -->
 	</section> <!--  wallets -->
@@ -212,7 +253,7 @@
 				<img src="images/anycoin.png" alt="">
 				<h3 class="">Anycoin </h3>
 				<p class="blockInfo">A platform where you can trade DTZ / BCH with the highest possible security.</p>
-				<a href="https://www.anycoin.cash/#/pages/exchange/dashboard/dtzbch" class="actions blogButton">¡Trade now!</a>
+				<a href="#" class="actions blogButton">¡Trade now!</a>
 			</div>
 			<div class="block block3">
 				<img src="images/crytex.png" alt="">
@@ -223,7 +264,7 @@
 			</div>		
 		</div>	    
 	</div>
-</section> <!--  exchangess -->
+</section> <!--  servidores -->
 	<section class="twitterBar clearfix">
 			<div class="innerWrapper clearfix tweet">
 				<img src="images/1627426410918.png" height="90" width="90" alt="">
@@ -234,7 +275,7 @@
 			</div> <!-- end of sponsor  -->
 	</section><!--  banner sponsor  -->
 	
-	<section class="clearfix">
+	<section id="contact" class="clearfix">
 		<div class="innerWrapper clearfix">
 			<div class="squishWrapper">
 				<h2 class="">Associated Servers</h2>
@@ -266,42 +307,6 @@
 			</div>	    
 		</div>
 	</section> <!--  servidores -->
-
-	<section id="Team" class="blog clearfix">
-		<div class="innerWrapper clearfix">
-			<div class="blogHeader clearfix">
-				<div class="blogBox clearfix">
-					<h2 class="sectionTitle blogTitle">Team</h2>
-					<p class="sectionInfo blogInfo">
-						Qualified team, they are the best in the business, in addition to that they are people who are destined to achieve success. Get to know them and be part of a new experience with DATZ.</p>
-				</div>
-				<div class="blogTopBox">
-					<a href="https://datozhi.blogspot.com/" class="actions blogTop ">Know More</a>
-				</div>
-			</div><!--  end of blog header -->
-			<div class="squishWrapper">
-				<div class="block block1">
-					<img src="images/NekoAndE.png"  alt="">
-					<h3 class="blockTitle">👨‍✈️ Neko AndE 👨‍✈️ -  CEO</h3>
-					<p class="blockInfo">He has a futuristic vision that will take him to the top, he is a focused and dedicated person who will achieve success.</p>
-				</div>
-				<div class="block block2">
-					<img src="images/Octa.jpg" alt="">
-					<h3 class="blockTitle">🌀 Octa 🌀 - CFO</h3>
-					<p class="blockInfo">He keeps all our accounts and wallets in order, to say the least, he's a numbers genius, do you want to challenge him? Lucky!</p>
-				</div>
-				<div class="block block3">
-					<img src="images/IMS.png" alt="">
-					<h3 class="blockTitle">🔥 AlexysIMS 🔥 - CMO</h3>
-					<p class="blockInfo">He is passionate about images and works day and night to bring you the best DATZ advertising. You can count on it for your Entertainment.</p>
-				</div>
-				<div class="block block3">
-					<img src="images/RonaldMoreno.png" alt="">
-					<h3 class="blockTitle">🤑 Ronald 🤑 - CSO</h3>
-					<p class="blockInfo">He is a person who likes commerce, he makes sure that DATZ is the best seller in the market.</p>
-				</div>
-			</div>
-		</section> <!-- end team -->
 	
 	<section id="donar" class="footer clearfix">
 		<div class="innerWrapper clearfix">
